fix overflow on html while drawer opened

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -40,7 +40,7 @@
 /*
  * Just a quick hamburger
  */
-.menuToggle span
+.menuToggle > span
 {
   display: block;
   width: 33px;
@@ -109,7 +109,7 @@
 .circle-grow-screen {
   @apply bg-base-content;
   transition: background 0.3s ease;
-  scale: 30;
+  scale: 24;
   transition: scale 1.1s ease;
 }
 
